--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ a::after {
   <h1>Error 404 - <span class="errorcode">Page Not Found!</span></h1>
   <p class="output">The page <a href="#"><code><!--#echo var="REQUEST_URI" --></code></a> might have been removed had its name changed or is temporarily unavailable.</p>
   <p class="output">Please try to <a href="../">go back</a> or <a href="./index.html">return to the homepage</a>.</p>
-  <p class="output"><code><a href="#">User: <!--#echo var="REMOTE_ADDR" --></a></code></p>
+  <p class="output"><code>An error 404 was returned by the server - Page Not Found<br><br>Referring URL: <!--#echo var="HTTP_REFERER" --><br>Your IP Address: <!--#echo var="REMOTE_ADDR" --><br>Requested URL: <!--#echo var="REQUEST_URI" --><br>Server: <!--#echo var="HTTP_HOST" --><br>Status Code: <!--#echo var="REDIRECT_STATUS" --><br></code></p>
   <p class="output"><small>Copyrights &copy; ~Hack3r Oneness | All Rights Reserve</small></p>
 </div>
 
