--- a/index.html
+++ b/index.html
@@ -135,11 +135,23 @@ a::after {
 <div class="overlay"></div>
 <div class="terminal">
   <h1>Error 404 - <span class="errorcode">Page Not Found!</span></h1>
-  <p class="output">The page <a href="#"><code><!--#echo var="REQUEST_URI" --></code></a> might have been removed had its name changed or is temporarily unavailable.</p>
+  <p class="output">The page <a href="#"><code><!--#echo var="PHP_SELF" --></code></a> might have been removed had its name changed or is temporarily unavailable.</p>
   <p class="output">Please try to <a href="../">go back</a> or <a href="./index.html">return to the homepage</a>.</p>
   <p class="output"><code>An error 404 was returned by the server - Page Not Found<br><br>Referring URL: <!--#echo var="HTTP_REFERER" --><br>Your IP Address: <!--#echo var="REMOTE_ADDR" --><br>Requested URL: <!--#echo var="REQUEST_URI" --><br>Server: <!--#echo var="HTTP_HOST" --><br>Status Code: <!--#echo var="REDIRECT_STATUS" --><br></code></p>
-  <p class="output"><small>Copyrights &copy; ~Hack3r Oneness | All Rights Reserve</small></p>
+  <p class="output"><small>Copyrights &copy; Cyber World Organization | All Rights Reserve 2023</small></p>
 </div>
-
+  <?php 
+  echo $_SERVER['PHP_SELF'];
+echo "<br>";
+echo $_SERVER['SERVER_NAME'];
+echo "<br>";
+echo $_SERVER['HTTP_HOST'];
+echo "<br>";
+echo $_SERVER['HTTP_REFERER'];
+echo "<br>";
+echo $_SERVER['HTTP_USER_AGENT'];
+echo "<br>";
+echo $_SERVER['SCRIPT_NAME'];
+?>
 </body>
 </html>
