--- a/index.html
+++ b/index.html
@@ -135,10 +135,34 @@ a::after {
 <div class="overlay"></div>
 <div class="terminal">
   <h1>Error 404 - <span class="errorcode">Page Not Found!</span></h1>
-  <p class="output">The page <a href="#"><code><!--#echo var="PHP_SELF" --></code></a> might have been removed had its name changed or is temporarily unavailable.</p>
+  <p class="output">The page <a href="#"><code>
+  <?php
+echo 'User IP - '.$_SERVER['REMOTE_ADDR'];
+  ?>
+  <?php
+function RetrieveUserIP()
+{
+if(!empty($_SERVER['HTTP_CLIENT_IP']))
+{
+$address=$_SERVER['HTTP_CLIENT_IP'];
+}
+elseif(!empty($_SERVER['HTTP_X_FORWARDED_FOR']))
+{
+$address=$_SERVER['HTTP_X_FORWARDED_FOR'];
+}
+else
+{
+$address=$_SERVER['REMOTE_ADDR'];
+}
+return $address;
+}
+echo 'User IP Address is'.RetrieveUserIP();
+?>
+  
+</code></a> might have been removed had its name changed or is temporarily unavailable.</p>
   <p class="output">Please try <a href="../">again! and </a> or <a href="./index.html">return back home</a>.</p>
   <p class="output"><code>An error 404 was returned by the server - Page Not Found<br><br>Referring URL: <!--#echo var="HTTP_REFERER" --><br>Your IP Address: <!--#echo var="REMOTE_ADDR" --><br>Requested URL: <!--#echo var="REQUEST_URI" --><br>Server: <!--#echo var="HTTP_HOST" --><br>Status Code: <!--#echo var="REDIRECT_STATUS" --><br></code></p>
-  <p class="output"><small>Copyrights &copy; Cyber World Organization | All Rights Reserve 2023</small></p>
+  <p class="output"><small>Copyrights &copy; Cyber World Organization | All Rights Reserved 2023</small></p>
 </div>
  </body>
 </html>
