--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
   <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top">
     <div class="container d-flex">
       <div class="contact-info mr-auto">
-        <i class="icofont-envelope"></i> <a href="mailto:contact@example.com">contact@example.com</a>
-        <i class="icofont-phone"></i> +000000000
+        <i class="icofont-envelope"></i> <a href="mailto:Support@cyberworldorg.tech">Support@cyberworldorg.tech</a>
+        <i class="icofont-phone"></i> +91 9521538168 [WhatsApp]
       </div>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="skype"><i class="icofont-skype"></i></a>
-        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></i></a>
+        <a href="https://twitter.com/CyberWorldOrg" class="twitter" target="_blank"><i class="icofont-twitter"></i></a>
+        <a href="https://www.facebook.com/cyberworldofficials/" class="facebook" target="_blank"><i class="icofont-facebook"></i></a>
+        <a href="https://www.instagram.com/cyberworldorganization/" class="instagram" target="_blank"><i class="icofont-instagram"></i></a>
+        <a href="#" class="skype" target="_blank"><i class="icofont-skype"></i></a>
+        <a href="https://in.linkedin.com/company/cyber-world-org/" class="linkedin" target="_blank"><i class="icofont-linkedin"></i></i></a>
       </div>
     </div>
   </div>
@@ -82,9 +82,7 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>
-          <li><a href="#contact">Contact</a></li>
-
-        </ul>
+                </ul>
       </nav><!-- .nav-menu -->
 
     </div>
@@ -850,7 +848,7 @@
             <div class="info-box  mb-4">
               <i class="bx bx-envelope"></i>
               <h3>Email Us</h3>
-              <p>contact@example.com</p>
+              <p>Support@cyberworldorg.tech</p>
             </div>
           </div>
 
@@ -858,7 +856,7 @@
             <div class="info-box  mb-4">
               <i class="bx bx-phone-call"></i>
               <h3>Call Us</h3>
-              <p>+1 5589 55488 55</p>
+              <p>+91 9521538168</p>
             </div>
           </div>
 
