--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -34,7 +34,7 @@
   <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top">
     <div class="container d-flex">
       <div class="contact-info mr-auto">
-        <i class="icofont-envelope"></i> <a href="mailto:Support@cyberworldorg.tech">Support@cyberworldorg.tech</a>
+        <i class="icofont-envelope"></i> <a href="mailto:Support@cyberworldorg.tech">support@cyberworldorg.tech</a>
         <i class="icofont-phone"></i> +91 9521538168 [WhatsApp]
       </div>
       <div class="social-links">
@@ -93,7 +93,7 @@
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
       <h1>Welcome to <span>Cyber World Organisation</span>
       </h1>
-      <h2>An Cyber Awareness Initiative Started By Sumit Oneness & Piyush Kaushik. Our Vision to promoting Cyber Awareness!!</h2>
+      <h2>An Cyber Awareness Initiative Started By Sumit Oneness. Our Vision to promoting Cyber Awareness!!</h2>
       <div class="d-flex">
         <a href="#about" class="btn-get-started scrollto">Get Started</a>
         <a href="" class="venobox btn-watch-video" data-vbtype="video" data-autoplay="true"> Watch Video <i class="icofont-play-alt-2"></i></a>
