--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#services">Initiatives</a></li>
+          <!-- <li><a href="#services">Initiatives</a></li> -->
           <li><a href="#portfolio">Courses</a></li>
           <li><a href="#team">Internship</a></li>
           <li><a href="#team">Event</a></li>
           <li><a href="#team">Services</a></li>
-          <li><a href="#team">Vacancies</a></li>
+          <!-- <li><a href="#team">Vacancies</a></li> -->
           <li class="drop-down"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -95,8 +95,8 @@
       </h1>
       <h2>An Cyber Awareness Initiative Started By Sumit Oneness. Our Vision to promoting Cyber Awareness!!</h2>
       <div class="d-flex">
-        <a href="#about" class="btn-get-started scrollto">Get Started</a>
-        <a href="" class="venobox btn-watch-video" data-vbtype="video" data-autoplay="true"> Watch Video <i class="icofont-play-alt-2"></i></a>
+        <a href="#about" class="btn-get-started scrollto">Get Involed</a>
+        <!-- <a href="" class="venobox btn-watch-video" data-vbtype="video" data-autoplay="true"> Watch Video <i class="icofont-play-alt-2"></i></a> -->
       </div>
     </div>
   </section><!-- End Hero -->
@@ -462,6 +462,7 @@
     </section><!-- End Testimonials Section -->
 
     <!-- ======= Portfolio Section ======= -->
+      <!--
     <section id="portfolio" class="portfolio">
       <div class="container" data-aos="fade-up">
 
@@ -471,7 +472,7 @@
           <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
         </div>
 
-        <div class="row" data-aos="fade-up" data-aos-delay="100">
+         <div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
@@ -480,7 +481,7 @@
               <li data-filter=".filter-web">Web</li>
             </ul>
           </div>
-        </div>
+        </div> 
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
@@ -577,7 +578,7 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section><!-- End Portfolio Section --> -->
 
     <!-- ======= Team Section ======= -->
     <section id="team" class="team section-bg">
@@ -926,13 +927,13 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>BizLand<span>.</span></h3>
+            <h3>Cyber World Organization<span>.</span></h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              Rohini Region <br>
+              North West Delhi 110086<br>
+              India <br><br>
+              <strong>Phone:</strong> +91 9718067660<br>
+              <strong>Email:</strong> support@cyberworldorg.tech<br>
             </p>
           </div>
 
@@ -952,15 +953,15 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Cyber Crime Analysis</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Cyber Security Training & Awareness </a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Criminal Investigation and Strategicial solutions</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Social Networks</h4>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
+            <p>Follow us on our listed social media.</p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -976,7 +977,7 @@
 
     <div class="container py-4">
       <div class="copyright">
-        &copy; Copyright <strong><span>Cyber World Organisation</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Cyber World Organisation</span></strong>. All Rights Reserved 2023 <img src="/assets/img/pngwing.com.png" height="50px" width="50px" alt="India">
       </div>
       <div class="credits">
       </div>
