--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
 
       <h1 class="logo mr-auto"><a href="index.html">Cyber World Organisation<span>.</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo mr-auto"><img src="assets/img/logo (1).jpg" alt=""></a>
+        <a href="index.html" class="logo mr-auto">
+            <img src="assets/img/logo (1).jpg" alt="Logo">
+            <img src="assets/img/G20_India_2023_logo.svg.png" alt="Logo">
+        </a>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -65,16 +68,21 @@
           <li><a href="#team">Event</a></li>
           <li><a href="#team">Services</a></li>
           <!-- <li><a href="#team">Vacancies</a></li> -->
-          <li class="drop-down"><a href="">Drop Down</a>
+          <li class="drop-down"><a href="">Menu</a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="drop-down"><a href="#">Deep Drop Down</a>
+              <li><a href="#">Core Team</a></li>
+              <li class="drop-down"><a href="#">CWO Wings</a>
                 <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
+                  <li class="drop-down"><a href="#">Cyber Crime Agency</a>
+                    <ul>
+                        <li><a href="#">Report A Cyber Crime</a></li>
+                        <li><a href="#"> Cyber Awareness </a></li>
+                    </ul>
+                </li>
+                  <li><a href="#">Cyber Salvager</a></li>
+                  <li><a href="#">Cyber Suraksha</a></li>
+                  <li><a href="#">Noob Hack3rs Community</a></li>
+                  <li><a href="#">Coders Flow AI</a></li>
                 </ul>
               </li>
               <li><a href="#">Drop Down 2</a></li>
@@ -977,7 +985,7 @@
 
     <div class="container py-4">
       <div class="copyright">
-        &copy; Copyright <strong><span>Cyber World Organisation</span></strong>. All Rights Reserved 2023 <img src="/assets/img/pngwing.com.png" height="50px" width="50px" alt="India">
+        &copy; Copyright <strong><span>Cyber World Organisation</span></strong>. All Rights Reserved 2023 <img src="/assets/img/pngwing.com.png" height="40px" width="40px" alt="India">
       </div>
       <div class="credits">
       </div>
