--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
         <p class="credit">Template by <a href="http://www.medialoot.com">MediaLoot</a></p>
     </div>
     <!-- Coming Soon Wrapper end -->
+	<a title="Web Analytics" href="https://clicky.com/101428745"><img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+<script async data-id="101428745" src="//static.getclicky.com/js"></script>
+
 
     <!-- Jquery Library File -->
     <script src="javascripts/jquery-1.12.4.min.js"></script>
