--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
     </div>
     <!-- Coming Soon Wrapper end -->
 	<a title="Web Analytics" href="https://clicky.com/101428745"><img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
-<script async data-id="101428745" src="//static.getclicky.com/js"></script>
+<script async src="//static.getclicky.com/101428745.js"></script>
+<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101428745ns.gif" /></p></noscript>
 
 
     <!-- Jquery Library File -->
