--- a/index.html
+++ b/index.html
@@ -82,9 +82,7 @@
         <p class="credit">Template by <a href="http://www.medialoot.com">MediaLoot</a></p>
     </div>
     <!-- Coming Soon Wrapper end -->
-	<a title="Web Analytics" href="https://clicky.com/101428745"><img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
-<script async src="//static.getclicky.com/101428745.js"></script>
-<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101428745ns.gif" /></p></noscript>
+	<script src="//widgets.clicky.com/tally/?site_id=101428745&sitekey=69cbf969336775ed9080dd88a6c322c1&width=175&height=250&title=&hide_title=0&hide_branding=0" type="text/javascript"></script>
 
 
     <!-- Jquery Library File -->
