--- a/index.html
+++ b/index.html
@@ -82,9 +82,7 @@
         <p class="credit">Template by <a href="http://www.medialoot.com">MediaLoot</a></p>
     </div>
     <!-- Coming Soon Wrapper end -->
-	<script src="//widgets.clicky.com/tally/?site_id=101428745&sitekey=69cbf969336775ed9080dd88a6c322c1&width=175&height=250&title=&hide_title=0&hide_branding=0" type="text/javascript"></script>
-
-
+	
     <!-- Jquery Library File -->
     <script src="javascripts/jquery-1.12.4.min.js"></script>
     <!-- Timer counter js file -->
@@ -115,6 +113,9 @@
 
     </script>
     <!-- Timer counter end -->
+	<a title="Google Analytics Alternative" href="https://clicky.com/101428745"><img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+<script async data-id="101428745" src="//static.getclicky.com/js"></script>
+
 </body>
 
 </html>
