--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <body>
     <div class="wrapper">
-        <img src="images/logo.png" alt="YourLogo" title="YourLogo" />
+        <img src="images/logo.png" alt="CWO" title="CWO" />
         <div class="hr"></div>
         <h1>Coming Soon to a Browser Near You</h1>
         <p>Unfortunately, we’re not quite ready yet. <strong> But, you can see our progress below:</strong></p>
