--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9631599338723227"
+     crossorigin="anonymous"></script>
+	
     <meta charset="utf-8" />
     <title>Website is Under Development Mode</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
