--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 
 <head>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9631599338723227"
-     crossorigin="anonymous"></script>
+<meta name="google-adsense-account" content="ca-pub-9631599338723227">
 	
     <meta charset="utf-8" />
     <title>Website is Under Development Mode</title>
