--- a/edit-index.html
+++ b/edit-index.html
@@ -6,8 +6,10 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Cyber World Organisation</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta name="google-adsense-account" content="ca-pub-9631599338723227">
+  <meta content="Cyber World Organization is an Non-Profit Organization under Govt of MSME and working on Cyber security domain." name="description">
+  <meta content="CWO, Cyber World Organization, CCA, CS, Cyber Crime Agency, Coders Flow AI" name="keywords">
+  <meta http-equiv="refresh" content="100">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -71,7 +73,7 @@
           <li class="drop-down"><a href="">Menu</a>
             <ul>
               <li><a href="#">Core Team</a></li>
-              <li class="drop-down"><a href="#">CWO Wings</a>
+              <li class="drop-down"><a href="#">CWO Divisions</a>
                 <ul>
                   <li class="drop-down"><a href="#">Cyber Crime Agency</a>
                     <ul>
@@ -85,9 +87,9 @@
                   <li><a href="#">Coders Flow AI</a></li>
                 </ul>
               </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="#">RTI</a></li>
+              <li><a href="#">Usefull Links</a></li>
+              <li><a href="#">Connect with us</a></li>
             </ul>
           </li>
                 </ul>
@@ -101,7 +103,7 @@
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
       <h1>Welcome to <span>Cyber World Organisation</span>
       </h1>
-      <h2>An Cyber Awareness Initiative Started By Sumit Oneness. Our Vision to promoting Cyber Awareness!!</h2>
+      <h2>A Cyber Awareness Initiative Started By Sumit Oneness. Our Vision is to promote Cyber Awareness!</h2>
       <div class="d-flex">
         <a href="#about" class="btn-get-started scrollto">Get Involed</a>
         <!-- <a href="" class="venobox btn-watch-video" data-vbtype="video" data-autoplay="true"> Watch Video <i class="icofont-play-alt-2"></i></a> -->
@@ -595,7 +597,7 @@
         <div class="section-title">
           <h2>Team</h2>
           <h3>Our Hardworking <span>Team</span></h3>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+          <p>Each division has a different team that is working concurrently on the premises.</p>
         </div>
 
         <div class="row">
@@ -678,6 +680,7 @@
     </section><!-- End Team Section -->
 
     <!-- ======= Pricing Section ======= -->
+      <!--
     <section id="pricing" class="pricing">
       <div class="container" data-aos="fade-up">
 
@@ -761,7 +764,9 @@
         </div>
 
       </div>
-    </section><!-- End Pricing Section -->
+    </section>
+-->
+      <!-- End Pricing Section -->
 
     <!-- ======= Frequently Asked Questions Section ======= -->
     <section id="faq" class="faq section-bg">
@@ -770,61 +775,67 @@
         <div class="section-title">
           <h2>F.A.Q</h2>
           <h3>Frequently Asked <span>Questions</span></h3>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+          <p>New here? view our F.A.Q.</p>
         </div>
 
         <ul class="faq-list" data-aos="fade-up" data-aos-delay="100">
 
           <li>
-            <a data-toggle="collapse" class="" href="#faq1">Non consectetur a erat nam at lectus urna duis? <i class="icofont-simple-up"></i></a>
+            <a data-toggle="collapse" class="" href="#faq1">What is Cyber World Organization?<i class="icofont-simple-up"></i></a>
             <div id="faq1" class="collapse show" data-parent=".faq-list">
               <p>
-                Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                Cyber World Organization is a Non-Profit Organization registered Under Ministry of MSME, Govt. of India via Startup India.
               </p>
             </div>
           </li>
 
           <li>
-            <a data-toggle="collapse" href="#faq2" class="collapsed">Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque? <i class="icofont-simple-up"></i></a>
+            <a data-toggle="collapse" href="#faq2" class="collapsed">What are the CWO's sub-bodies and how do I connect?<i class="icofont-simple-up"></i></a>
             <div id="faq2" class="collapse" data-parent=".faq-list">
               <p>
-                Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                CWO is made up of five divisions, each with its own work domain.
+                  which are as follows: 
+              <ul>
+                <li>Cyber Crime Agency</li>
+                <li>N00B Hackers Community</li>
+                <li>Cyber Salvager</li>
+                <li>Coders Flow AI</li>
+                <li>Cyber Suraksha</li>
+              </ul
               </p>
             </div>
           </li>
 
           <li>
-            <a data-toggle="collapse" href="#faq3" class="collapsed">Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi? <i class="icofont-simple-up"></i></a>
+            <a data-toggle="collapse" href="#faq3" class="collapsed">How do I get an internship under any of these sub-divisions? <i class="icofont-simple-up"></i></a>
             <div id="faq3" class="collapse" data-parent=".faq-list">
               <p>
-                Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                You can visit any of these units as per your interest.
               </p>
             </div>
           </li>
 
           <li>
-            <a data-toggle="collapse" href="#faq4" class="collapsed">Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla? <i class="icofont-simple-up"></i></a>
+            <a data-toggle="collapse" href="#faq4" class="collapsed">Can I work with the internal team?<i class="icofont-simple-up"></i></a>
             <div id="faq4" class="collapse" data-parent=".faq-list">
               <p>
-                Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                Yes, of course. You can apply for volunteer and full-time employment under CWO, and there is a form to be filled out for that here: <a href="https://cyberworldorg.tech/apply">Apply Here</a>
               </p>
             </div>
           </li>
 
           <li>
-            <a data-toggle="collapse" href="#faq5" class="collapsed">Tempus quam pellentesque nec nam aliquam sem et tortor consequat? <i class="icofont-simple-up"></i></a>
+            <a data-toggle="collapse" href="#faq5" class="collapsed">Who is founder of the CWO? <i class="icofont-simple-up"></i></a>
             <div id="faq5" class="collapse" data-parent=".faq-list">
-              <p>
-                Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in
-              </p>
+                <p>Mr. <span> Sumit Kumar</span> is Founder and CEO of the whole CWO.<br><a href="https://in.linkedin.com/company/cyber-world-org/" class="linkedin" target="_blank"><i class="icofont-linkedin"></i></a></br></p>
             </div>
           </li>
 
           <li>
-            <a data-toggle="collapse" href="#faq6" class="collapsed">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor? <i class="icofont-simple-up"></i></a>
+            <a data-toggle="collapse" href="#faq6" class="collapsed">Where is your office located in Delhi? <i class="icofont-simple-up"></i></a>
             <div id="faq6" class="collapse" data-parent=".faq-list">
               <p>
-                Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque. Pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus faucibus. Nibh tellus molestie nunc non blandit massa enim nec.
+                Currently, Our office is virtually located in New Delhi in North West region.
               </p>
             </div>
           </li>
@@ -841,7 +852,7 @@
         <div class="section-title">
           <h2>Contact</h2>
           <h3><span>Contact Us</span></h3>
-          <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+          <p>In order that we may be able to obtain the pleasure and pleasure of life in every way, it is expedient for us to be able to do so at any given time.</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -849,7 +860,7 @@
             <div class="info-box mb-4">
               <i class="bx bx-map"></i>
               <h3>Our Address</h3>
-              <p>A108 Adam Street, New York, NY 535022</p>
+              <p>Rohini | Haryana | New Delhi | India</p>
             </div>
           </div>
 
@@ -874,10 +885,11 @@
         <div class="row" data-aos="fade-up" data-aos-delay="100">
 
           <div class="col-lg-6 ">
-            <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
-          </div>
-
-          <div class="col-lg-6">
+            <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3499.560865258706!2d77.06190607418998!3d28.70277998088957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d0798c4650fb9%3A0x36d6b1edc22735f3!2sCyber%20World%20Organization!5e0!3m2!1sen!2sus!4v1699429562003!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
+              
+             </div>
+            
+            <div class="col-lg-6">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="form-row">
                 <div class="col form-group">
@@ -921,7 +933,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-6">
             <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <p>For weekly newsletter kindly subscribe Us!</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
@@ -1011,5 +1023,4 @@
   <script src="assets/js/main.js"></script>
 
 </body>
-
 </html>
