--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <!-- Countdown end -->
 
-
+<img src="images/anim0205-1_e0.gif" width="auto" height="auto">
         <div class="hr"></div>
         <section class="mailing-list">
             <h2>Want to be the first to know when we're ready?</h2>
