--- a/edit-index.html
+++ b/edit-index.html
@@ -117,7 +117,8 @@
     <!-- ======= Featured Services Section ======= -->
     <section id="featured-services" class="featured-services">
       <div class="container" data-aos="fade-up">
-          <img src="/assets/img/banner.png" alt="Banner" width="1100px" height="400px">
+          <img src="assets/img/banner.png" alt="Banner" width="1100px" height="420px">
+          <br>
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
