--- a/index.html
+++ b/index.html
@@ -81,7 +81,12 @@
         <div class="clear"></div>
         <div class="hr"></div>
 
-        <p class="credit">Template by <a href="http://www.medialoot.com">MediaLoot</a></p>
+        <p class="credit">Template by <a href="http://www.medialoot.com">MediaLoot</a>
+	
+	 <div id="sfc5b7u6h3nwrwx62fnnwx3gm3gf5757a5f"></div>
+        <script type="text/javascript" src="https://counter8.optistats.ovh/private/counter.js?c=5b7u6h3nwrwx62fnnwx3gm3gf5757a5f&down=async" async></script><noscript><a href="https://www.freecounterstat.com" title="website hit counter"><img src="https://counter8.optistats.ovh/private/freecounterstat.php?c=5b7u6h3nwrwx62fnnwx3gm3gf5757a5f" border="0" title="website hit counter" alt="website hit counter"></a></noscript>
+	    
+	</p>
     </div>
     <!-- Coming Soon Wrapper end -->
 	
