--- a/index.html
+++ b/index.html
@@ -119,6 +119,18 @@
         });
 
     </script>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9631599338723227"
+     crossorigin="anonymous"></script>
+<!-- Google Ads -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9631599338723227"
+     data-ad-slot="7614202495"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <!-- Timer counter end -->
 	</body>
 
