--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+	<meta name='dmca-site-verification' content='Vi9ncDdmYzVjclFqdDdFWVJMekpaQi9CdC9WMzJFMEJ1R3hieDkvU1Q4bz01' />
 
     <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js'></script>
     <script type='text/javascript' src='javascripts/jquery.tipsy.js'></script>
