--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
     <!-- Timer counter end -->
+	<a href="//www.dmca.com/Protection/Status.aspx?ID=564046c9-c45a-440f-af06-3f51f52aa4bb" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca-badge-w150-5x1-04.png?ID=564046c9-c45a-440f-af06-3f51f52aa4bb"  alt="DMCA.com Protection Status" /></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>
 	</body>
 
 </html>
