--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
 
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-721077002"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-721077002');
+</script>
+
 <body>
     <div class="wrapper">
         <img src="images/logo.png" alt="CWO" title="CWO" />
