--- a/edit-index.html
+++ b/edit-index.html
@@ -30,6 +30,16 @@
   <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-721077002"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-721077002');
+</script>
+
 <body>
 
   <!-- ======= Top Bar ======= -->
