--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -29,6 +29,16 @@
 
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-721077002"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-721077002');
+</script>
+
 <body>
 
   <!-- ======= Top Bar ======= -->
