--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,6 +1,18 @@
 <html>
   <title>Privacy Policy</title>
-  <head></head>
+  <head>
+    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-721077002"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-721077002');
+</script>
+
+  </head>
     <body>
 <style>
   [data-custom-class='body'], [data-custom-class='body'] * {
