--- a/404.html
+++ b/404.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
 <head>
+  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-721077002"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-721077002');
+</script>
+
 <title>Warning | Unauthorized Access </title>
 <style>
 @import 'https://fonts.googleapis.com/css?family=Inconsolata';
