--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   gtag('config', 'AW-721077002');
 </script>
 	<meta name="google-adsense-account" content="ca-pub-9631599338723227">
-	
+	<!-- Google tag end -->
+    
     <meta charset="utf-8" />
     <title>Website is Under Development Mode</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -20,6 +21,7 @@
 
     <!-- Main custom css -->
     <link href="css/custom.css" rel="stylesheet" media="screen">
+    <link href="css/tooplate-kool-form-pack.css" rel="stylesheet" media="screen">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -99,8 +101,18 @@
         <p class="credit">Template by <a href="http://www.medialoot.com">MediaLoot</a>
 	
 	  
-	</p>
+	   </p>
+       
     </div>
+     <section class="hero-section d-flex justify-content-center align-items-center" id="section_1">
+        <div class="video-wrap">
+                    <video autoplay="true" loop="" muted="" class="custom-video" poster="">
+                        <source src="videos/video.mp4" type="video/mp4" width="auto" height="auto">
+
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+        </section>
     <!-- Coming Soon Wrapper end -->
 	
     <!-- Jquery Library File -->
@@ -132,6 +144,7 @@
         });
 
     </script>
+     <!-- Timer counter end -->
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9631599338723227"
      crossorigin="anonymous"></script>
 <!-- Google Ads -->
@@ -144,7 +157,7 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-    <!-- Timer counter end -->
+   <!-- Google Ads End -->
 	<a href="//www.dmca.com/Protection/Status.aspx?ID=564046c9-c45a-440f-af06-3f51f52aa4bb" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca-badge-w150-5x1-04.png?ID=564046c9-c45a-440f-af06-3f51f52aa4bb"  alt="DMCA.com Protection Status" /></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>
 	</body>
 
