--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
 <!--  <div id="sfc5b7u6h3nwrwx62fnnwx3gm3gf5757a5f"></div>
         <script type="text/javascript" src="https://counter8.optistats.ovh/private/counter.js?c=5b7u6h3nwrwx62fnnwx3gm3gf5757a5f&down=async" async></script><noscript><a href="https://www.freecounterstat.com" title="website hit counter"><img src="https://counter8.optistats.ovh/private/freecounterstat.php?c=5b7u6h3nwrwx62fnnwx3gm3gf5757a5f" border="0" title="website hit counter" alt="website hit counter"></a></noscript>
 --> 
-	    <script type="text/javascript" src="//counter.websiteout.net/js/2/4/0/0"></script>
+	   <!--  <script type="text/javascript" src="//counter.websiteout.net/js/2/4/0/0"></script> -->
+	    <!-- Start: Copyright 2024 TraceMyIP.org Service Code (091304-01162024)- DO NOT MODIFY //-->
+<div id="elemID031021" style="line-height:16px;text-align:center;position:relative;z-index:100000;"><script async type="text/javascript" src="//s2.tracemyip.org/vLg/lgUrl.php?pidnVar2=102262&amp;prtVar2=2&amp;stlVar2=1217&amp;rgtype=4684NR-IPIB&amp;scvVar2=12"></script><noscript><div><a href="https://www.tracemyip.org/website-visitors-alerts.htm"><img src="//s2.tracemyip.org/vLg/1217/4684NR-IPIB/102262/2/12/ans/" alt="Site visitor notifications" referrerpolicy="no-referrer-when-downgrade" style="border:0px;" /></a></div></noscript></div> <!-- End: TraceMyIP.org Service Code //-->
+	    
         <p class="credit">Template by <a href="http://www.medialoot.com">MediaLoot</a>
 	
 	  
