--- a/index.html
+++ b/index.html
@@ -99,7 +99,15 @@
 --> 
 	   <script type="text/javascript" src="//counter.websiteout.net/js/2/4/0/0"></script>
 <!-- Start: Copyright 2024 TraceMyIP.org Service Code (091623-01162024)- DO NOT MODIFY //-->
-<div id="elemID031021" style="line-height:16px;text-align:center;position:relative;z-index:100000;"><script async type="text/javascript" src="//s2.tracemyip.org/vLg/lgUrl.php?pidnVar2=102262&amp;prtVar2=2&amp;stlVar2=1217&amp;rgtype=4684NR-IPIB&amp;scvVar2=12"></script><noscript><div><a href="https://www.tracemyip.org/website-visitors-alerts.htm"><img src="//s2.tracemyip.org/vLg/1217/4684NR-IPIB/102262/2/12/ans/" alt="Blog visit notifications" referrerpolicy="no-referrer-when-downgrade" style="border:0px;" /></a></div></noscript></div> 
+<div id="elemID031021" style="line-height:16px;text-align:center;position:relative;z-index:100000;">
+	<script async type="text/javascript" src="//s2.tracemyip.org/vLg/lgUrl.php?pidnVar2=102262&amp;prtVar2=2&amp;stlVar2=1217&amp;rgtype=4684NR-IPIB&amp;scvVar2=12"></script>
+	<noscript>
+		<div>
+			<a href="https://www.tracemyip.org/website-visitors-alerts.htm">
+			<img src="//s2.tracemyip.org/vLg/1217/4684NR-IPIB/102262/2/12/ans/" alt="Blog visit notifications" referrerpolicy="no-referrer-when-downgrade" style="border:0px;" /></a>
+		</div>
+	</noscript>
+</div> 
 	    
 	    <!-- End: TraceMyIP.org Service Code //-->    
         <p class="credit">Template by <a href="http://www.medialoot.com">MediaLoot</a>
