--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-721077002"></script>
+<script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -49,6 +50,7 @@
 
 
 </head>
+	<div class="cf-turnstile" data-sitekey="0x4AAAAAAAGjfGJwd5uPHfSD" data-callback="javascriptCallback"></div>
 <body>
     <div class="wrapper">
         <img src="images/logo.png" alt="CWO" title="CWO" />
