--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
 </head>
-	<div class="cf-turnstile" data-sitekey="0x4AAAAAAAGjfGJwd5uPHfSD" data-callback="javascriptCallback"></div>
+	
 <body>
     <div class="wrapper">
         <img src="images/logo.png" alt="CWO" title="CWO" />
@@ -86,6 +86,7 @@
         <!-- Countdown end -->
 
 <img src="images/anim0205-1_e0.gif" width="auto" height="auto">
+	  <center><div class="cf-turnstile" data-sitekey="0x4AAAAAAAGjfGJwd5uPHfSD" data-callback="javascriptCallback"></div></center>
         <div class="hr"></div>
         <section class="mailing-list">
             <h2>Want to be the first to know when we're ready?</h2>
