--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en" ⚡>
 
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XWYJZ5F0WW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XWYJZ5F0WW');
+</script>
+	
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-721077002"></script>
 <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
