--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
             </div>
             <article class="txt-launch-day-hat"></article>
         </section>
-
+<script async src="https://cse.google.com/cse.js?cx=6505a0b59b629475a">
+</script>
+<div class="gcse-searchbox-only"></div>
 
         <!-- Types Information start -->
         <div class="coming-text">
