--- a/edit-index.html
+++ b/edit-index.html
@@ -67,7 +67,9 @@
       </div>
     </div>
   </div>
-
+<script async src="https://cse.google.com/cse.js?cx=6505a0b59b629475a">
+</script>
+<div class="gcse-searchbox-only"></div>
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
