--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" ⚡>
-
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
 	<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XWYJZ5F0WW"></script>
 <script>
@@ -19,13 +22,11 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'AW-721077002');
 </script>
-	<meta name="google-adsense-account" content="ca-pub-9631599338723227">
+    <meta name="google-adsense-account" content="ca-pub-9631599338723227">
 	<!-- Google tag end -->
     
-    <meta charset="utf-8" />
     <title>Website is Under Development Mode</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <!-- Bootstrap css -->
@@ -39,7 +40,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-	<meta name='dmca-site-verification' content='Vi9ncDdmYzVjclFqdDdFWVJMekpaQi9CdC9WMzJFMEJ1R3hieDkvU1Q4bz01' />
+    <meta name='dmca-site-verification' content='Vi9ncDdmYzVjclFqdDdFWVJMekpaQi9CdC9WMzJFMEJ1R3hieDkvU1Q4bz01' />
 
     <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js'></script>
     <script type='text/javascript' src='javascripts/jquery.tipsy.js'></script>
@@ -55,11 +56,9 @@
     <!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-
-
-
-
-</head>
+<link rel="stylesheet" href="./social-media-icons.css">
+    <script src="https://kit.fontawesome.com/66aa7c98b3.js" crossorigin="anonymous"></script>
+	</head>
 	
 <body>
     <div class="wrapper">
@@ -75,6 +74,16 @@
             </div>
             <article class="txt-launch-day-hat"></article>
         </section>
+
+<div class="social-menu">
+        <ul>
+            <li><a href="https://in.linkedin.com/company/cyber-world-org/" target="blank"><i class="fab fa-linkedin-in"></i></a></li>
+            <li><a href="https://www.instagram.com/cyberworldorganization/"><i class="fab fa-instagram"></i></a></li>
+	    <li><a href="https://www.facebook.com/cyberworldofficials/"><i class="fab fa-facebook"></i></a></li>
+	    <li><a href="https://twitter.com/CyberWorldOrg"><i class="fab fa-twitter"></i></a></li>
+        </ul>
+    </div>
+	    
 <script async src="https://cse.google.com/cse.js?cx=6505a0b59b629475a">
 </script>
 <div class="gcse-searchbox-only"></div>
