--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         });
 
     </script>
+    <script async src="https://cse.google.com/cse.js?cx=6505a0b59b629475a"></script>
     <!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -84,8 +85,6 @@
         </ul>
     </div>
 	    
-<script async src="https://cse.google.com/cse.js?cx=6505a0b59b629475a">
-</script>
 <div class="gcse-searchbox-only"></div>
 
         <!-- Types Information start -->
