--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-<link rel="stylesheet" href="./social-media-icons.css">
+<link rel="stylesheet" href="/css/social-media-icons.css">
     <script src="https://kit.fontawesome.com/66aa7c98b3.js" crossorigin="anonymous"></script>
 	</head>
 	
