--- a/edit-index.html
+++ b/edit-index.html
@@ -1032,6 +1032,9 @@
       <!-- Web Hit Counter -->
       <script type="text/javascript" src="//counter.websiteout.net/js/2/4/0/0"></script>
             <!-- End of Counter -->
+      <a href="//www.dmca.com/Protection/Status.aspx?ID=564046c9-c45a-440f-af06-3f51f52aa4bb" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca-badge-w150-5x1-04.png?ID=564046c9-c45a-440f-af06-3f51f52aa4bb"  alt="DMCA.com Protection Status" /></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>
+	</body>
+      
         <div class="credits">Web Contents Managed by Cyber World Organization IT Team!</div>
     </div>
   </footer><!-- End Footer -->
