--- a/edit-index.html
+++ b/edit-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ⚡>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -91,7 +91,7 @@
           <li><a href="#team">Internship</a></li>
           <li><a href="#team">Event</a></li>
           <li><a href="#team">Services</a></li>
-          <!-- <li><a href="#team">Vacancies</a></li> -->
+          <li><a href="#team">Work with Us</a></li>
           <li class="drop-down"><a href="">Menu</a>
             <ul>
               <li><a href="#">Core Team</a></li>
@@ -99,27 +99,26 @@
                 <ul>
                   <li class="drop-down"><a href="#">Cyber Crime Agency</a>
                     <ul>
-                        <li><a href="#">Report A Cyber Crime</a></li>
+                        <li><a href="https://www.cybercrime.gov.in/">Report Cyber Crime</a></li>
                         <li><a href="#"> Cyber Awareness </a></li>
                     </ul>
-                </li>
+                   </li>
                   <li><a href="#">Cyber Salvager</a></li>
                   <li><a href="#">Cyber Suraksha</a></li>
                   <li><a href="#">Noob Hack3rs Community</a></li>
                   <li><a href="#">Coders Flow AI</a></li>
+ 		  <li><a href="#">Cyber Security Council of India</a></li>
                 </ul>
               </li>
               <li><a href="#">RTI</a></li>
-              <li><a href="#">Usefull Links</a></li>
+              <li><a href="#">Useful Links</a></li>
               <li><a href="#">Connect with us</a></li>
             </ul>
           </li>
-                </ul>
+        </ul>
       </nav><!-- .nav-menu -->
-
     </div>
   </header><!-- End Header -->
-
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container" data-aos="zoom-in">
