--- a/edit-index.html
+++ b/edit-index.html
@@ -907,7 +907,7 @@
         <div class="row" data-aos="fade-up" data-aos-delay="100">
 
           <div class="col-lg-6 ">
-            <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3499.560865258706!2d77.06190607418998!3d28.70277998088957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d0798c4650fb9%3A0x36d6b1edc22735f3!2sCyber%20World%20Organization!5e0!3m2!1sen!2sus!4v1699429562003!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
+            <iframe class="mb-4 mb-lg-0" src="#" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
               
              </div>
             
