--- a/edit-index.html
+++ b/edit-index.html
@@ -907,7 +907,7 @@
         <div class="row" data-aos="fade-up" data-aos-delay="100">
 
           <div class="col-lg-6 ">
-            <iframe class="mb-4 mb-lg-0" src="#" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
+            <!-- <iframe class="mb-4 mb-lg-0" src="" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe> -->
               
              </div>
             
@@ -974,7 +974,7 @@
               Rohini Region <br>
               North West Delhi 110086<br>
               India <br><br>
-              <strong>Phone:</strong> +91 9718067660<br>
+              <strong>Phone:</strong> +91 9521538168<br>
               <strong>Email:</strong> support@cyberworldorg.tech<br>
             </p>
           </div>
